--- a/app/src/main/res/layout/newsitem.xml
+++ b/app/src/main/res/layout/newsitem.xml
@@ -9,11 +9,10 @@
     card_view:cardBackgroundColor="@android:color/transparent"
     card_view:cardCornerRadius="10dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/NewsTitle"
@@ -26,15 +25,12 @@
             android:textSize="18sp"
             android:textStyle="bold"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
             <ImageView
                 android:id="@+id/NewsImage"
                 android:layout_width="150dp"
                 android:layout_height="200dp"
+                android:layout_below="@id/NewsTitle"
+                android:layout_margin="10dp"
                 android:scaleType="fitXY"/>
 
             <TextView
@@ -44,9 +40,11 @@
                 android:layout_margin="10dp"
                 android:lineSpacingExtra="5dp"
                 android:textAlignment="center"
+                android:layout_below="@id/NewsTitle"
+                android:layout_toRightOf="@id/NewsImage"
+                android:layout_toEndOf="@+id/NewsImage"
                 android:textColor="#8DC2F3"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
-        </LinearLayout>
-    </LinearLayout>
+  </RelativeLayout>
 </android.support.v7.widget.CardView>
