--- a/app/src/main/res/layout/news_top_headline_layout.xml
+++ b/app/src/main/res/layout/news_top_headline_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +7,7 @@
     tools:context="com.example.ashish.newsrella.Activity.MainActivity"
     android:background="@drawable/gradient">
     <TextView
+        android:id="@+id/topheadLines"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -18,8 +19,9 @@
         android:id="@+id/rv_top_headlines"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/topheadLines"
         android:gravity="center"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
 
 
