--- a/app/src/main/res/layout/newsitem.xml
+++ b/app/src/main/res/layout/newsitem.xml
@@ -11,8 +11,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/NewsTitle"
