--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="@string/select_news_sources"
-        android:textColor="#ffffff"
+        android:textColor="@color/white"
         android:textSize="20sp"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_news_sources"
